--- a/index.html
+++ b/index.html
@@ -1,24 +1,30 @@
 <html>
 <head>
     <title>Pong</title>
-    <style>
-        body {
-            align-items: center;
-            background: #202020;
-            display: flex;
-            margin: 0;
-        }
-        canvas {
-            border: solid 1px #fff;
-            border-left: none;
-            border-right: none;
-            image-rendering: pixelated;
-            width: 100%;
-        }
-    </style>
+    <link rel="stylesheet" href="css/styles.css">
+    <script src="js/granim.min.js"></script>
 </head>
 <body>
-    <canvas id="pong" width="600" height="400" />
-    <script src="pong.js"></script>
+    <canvas id="pong" width="600" height="400"></canvas>
+    <canvas id="bg" width="600" height="400"></canvas>
+
+    <script src="js/pong.js"></script>
+    <script>
+        var granimInstance = new Granim({
+        element: '#bg',
+        direction: 'left-right',
+        isPausedWhenNotInView: true,
+        states : {
+            "default-state": {
+                gradients: [
+                    ['#ff9966', '#ff5e62'],
+                    ['#00F260', '#0575E6'],
+                    ['#e1eec3', '#f05053']
+                    ]
+                }
+            }
+        });
+    </script>
+
 </body>
 </html>
